# predictIQ

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .semgrep.yml  AMM_IMPLEMENTATION.md  ANALYTICS.md  API_SPEC.md  ARCHITECTURE.md  CHANGELOG.md  CI_CD_READY.md  CLASSIC_ASSETS_INTEGRATION.md  CONTENT_MANAGEMENT.md  CONTRIBUTING.md  CREATE_PR_ISSUE_25.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  E2E_QUICK_REFERENCE.md  E2E_VERIFICATION_REPORT.md  IMPLEMENTATION_ISSUE_11.md  IMPLEMENTATION_ISSUE_12.md  IMPLEMENTATION_ISSUE_27.md  IMPLEMENTATION_ISSUE_29.md  IMPLEMENTATION_ISSUE_30.md  IMPLEMENTATION_ISSUE_31.md  IMPLEMENTATION_ISSUE_4.md  IMPLEMENTATION_ISSUE_6.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ISSUES_723_726.md  IMPLEMENTATION_SUMMARY_ISSUE_44.md  IMPLEMENTATION_SUMMARY_ISSUE_50.md  IMPLEMENTATION_SUMMARY_ISSUE_92.md  ISSUE_92_CHECKLIST.md  ISSUE_92_COMPLETE.md  MULTISIG_EMERGENCY_PAUSE.md  Makefile  NEXT_STEPS_ISSUE_44.md  OPERATIONS.md  (+36 more)
contracts/predict-iq/: Cargo.toml  INVARIANTS.md  Makefile  README.md  TEST_CHECKLIST.md  TEST_GUIDE.md
contracts/predict-iq/.cargo/: config.toml
contracts/predict-iq/benches/: README.md  gas_benchmark.rs  gas_benchmark.sh
contracts/predict-iq/fuzz/: Cargo.toml
contracts/predict-iq/fuzz/fuzz_targets/: fuzz_place_bet.rs  fuzz_resolve_market.rs  fuzz_withdraw.rs
contracts/predict-iq/src/: errors.rs  lib.rs  mock_identity.rs  pyth_client.rs  query_tests.rs  test.rs  test_amm.rs  test_cancellation.rs  test_cancellation_referral.rs  test_classic_assets.rs  test_deposit_tier_reputation.rs  test_disputes_winner_count.rs  test_guardians.rs  test_identity.rs  test_multi_outcome_voting.rs  test_multi_token.rs  test_optimization.rs  test_oracle_overflow.rs  test_payout_mode_immutability.rs  test_pyth_integration.rs  test_referral.rs  test_resolution_state_machine.rs  test_security.rs  test_snapshot_voting.rs  test_tie_handling.rs  types.rs
contracts/predict-iq/src/modules/: admin.rs  admin_test.rs  amm.rs  bets.rs  bets_fuzz_test.rs  bets_test.rs  cancellation.rs  circuit_breaker.rs  circuit_breaker_test.rs  compression.rs  disputes.rs  disputes_weight_test.rs  event_archive.rs  events.rs  events_test.rs  fees.rs  gc.rs  governance.rs  guardians.rs  identity.rs  invariants_test.rs  markets.rs  markets_conditional_test.rs  markets_test.rs  migration.rs  mod.rs  monitoring.rs  oracles.rs  oracles_test.rs  property_invariants_test.rs  queries.rs  reentrancy.rs  resolution.rs  sac.rs  voting.rs
contracts/predict-iq/test_snapshots/: bench_create_market_100_outcomes.1.json  bench_create_market_10_outcomes.1.json  bench_create_market_50_outcomes.1.json  bench_full_market_lifecycle.1.json  bench_get_resolution_metrics.1.json  bench_place_multiple_bets.1.json  bench_reject_excessive_outcomes.1.json  bench_resolve_market.1.json
contracts/predict-iq/test_snapshots/test/: test_add_guardian.1.json  test_claim_winnings_double_claim.1.json  test_claim_winnings_three_winners.1.json  test_create_conditional_market_invalid_parent_outcome_idx.1.json  test_create_conditional_market_parent_not_resolved.1.json  test_create_conditional_market_success.1.json  test_deposit_released_after_resolution.1.json  test_execute_upgrade_after_timelock_succeeds.1.json  test_execute_upgrade_before_timelock_fails.1.json  test_get_upgrade_votes.1.json  test_guardian_pause_functionality.1.json  test_independent_market_has_no_parent.1.json  test_initialize_guardians.1.json  test_initialize_guardians_already_initialized.1.json  test_initiate_upgrade_starts_timelock.1.json  test_institutional_reputation_skips_deposit.1.json  test_insufficient_votes_to_execute.1.json  test_majority_vote_required.1.json  test_market_creation_fails_without_deposit.1.json  test_market_creation_with_sufficient_deposit.1.json  test_market_lifecycle.1.json  test_multi_level_conditional_markets.1.json  test_only_guardian_can_unpause.1.json  test_only_guardians_can_vote.1.json  test_oracle_manual_resolution.1.json  test_partial_freeze_claim_winnings_works_when_paused.1.json  test_persistent_state_preserved_on_upgrade.1.json  test_place_bet_blocked_when_paused.1.json  test_pro_reputation_skips_deposit.1.json  (+3 more)
contracts/predict-iq/tests/: full_flow_integration_test.rs  guardian_governance_test.rs  identity_verification_test.rs  integration_test.rs  lifecycle_test.rs  security_test.rs
services/api/: .env.example  API_SPEC.md  Cargo.toml  DATABASE.md  EMAIL.md  EMAIL_SERVICE.md  FEATURED_MARKETS_API.md  GRACEFUL_SHUTDOWN.md  METRICS.md  QUICK_START_EMAIL.md  README.md  SECURITY.md  SECURITY_SETUP.md  TRACING.md  deny.toml  openapi.yaml  test_rate_limit.sh  test_shutdown.ps1  test_shutdown.sh
services/api/benches/: api_key_auth.rs  email_queue.rs  email_templates.rs  invalidation_tags.rs
services/api/database/: SCHEMA.md  schema.sql
services/api/scripts/: compare-api-benchmarks.js  parse-bench-output.js  run_migrations.sh
services/api/sql/: newsletter_schema.sql  performance_indexes.sql
services/api/src/: api_key_auth_tests.rs  audit.rs  audit_middleware.rs  blockchain.rs  body_redact.rs  client_ip.rs  compression.rs  config.rs  contact.rs  content_type.rs  correlation.rs  csrf.rs  db.rs  handlers.rs  idempotency.rs  lib.rs  main.rs  metrics.rs  migrations.rs  newsletter.rs  openapi_spec.rs  pagination.rs  rate_limit.rs  resolve_market_tests.rs  security.rs  shutdown.rs  shutdown_tests.rs  tracing_config.rs  validation.rs  versioning.rs  waitlist.rs
services/api/templates/: contact_form_auto_response.html  contact_notification.html  newsletter_confirmation.html  schema.json  waitlist_confirmation.html  welcome_email.html
services/api/tests/: api_key_middleware_tests.rs  audit_middleware_tests.rs  blockchain_integration_tests.rs  blockchain_sync_tests.rs  contract_key_schema_tests.rs  cors_tests.rs  email_integration_test.sh  featured_markets_integration_test.sh  graceful_shutdown_test.rs  middleware_tests.rs  openapi_contract_test.rs  rate_limiting_tests.rs  request_validation_middleware_tests.rs  security_tests.rs  test_featured_markets.rs
(+444 files in other folders)
