[workspace]
resolver = "2"
members = ["contracts/*"]
exclude = ["services/tts", "services/api"]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.release-with-logs]
inherits = "release"
debug = true
