[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.dependencies]
soroban-sdk = "26.0.1"
rand = "0.10"
serde_json = "1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.test]
opt-level = 0
lto = false
codegen-units = 16

[profile.dev]
lto = false

[profile.release-with-logs]
inherits = "release"
debug = true
