[package]
name = "predict-iq"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rand = { workspace = true }
serde_json = { workspace = true }

[features]
testutils = ["soroban-sdk/testutils"]
legacy-tests = []
