[package]
name = "predictiq-api"
version = "0.1.0"
edition = "2021"
publish = false
# Minimum Supported Rust Version (MSRV).
# Determined by the most-restrictive dependency in this crate:
#   - axum 0.7 requires Rust ≥ 1.75
#   - sqlx 0.8 requires Rust ≥ 1.75
#   - tower-http 0.6 requires Rust ≥ 1.75
# The root Dockerfile already pins rust:1.75-slim for production builds.
# See CONTRIBUTING.md for the MSRV policy.
rust-version = "1.75"

[[bin]]
name = "predictiq-api"
path = "src/main.rs"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate_openapi.rs"

[lib]
name = "predictiq_api"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
handlebars = "5.1"
prometheus = "0.13"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "streams"] }
deadpool-redis = { version = "0.15", features = ["rt_tokio_1"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "net"] }
url = "2"
tokio-util = { version = "0.7", features = ["rt"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "compression-br"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.23"
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry-otlp = { version = "0.15", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.18"
tower_governor = "0.8"
sha2 = "0.10"
argon2 = "0.5"
hmac = "0.12"
rand = { version = "0.8", features = ["getrandom"] }
hex = "0.4"
base64 = "0.22"
subtle = "2.5"
secrecy = { version = "0.8", features = ["serde"] }
ipnet = "2"
fastrand = "2.4.1"
utoipa = { version = "4", features = ["yaml"] }

[features]
# Gate tests that require a live Redis instance (testcontainers or external).
# Run with: cargo test --features redis-integration
redis-integration = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers = { version = "0.23", features = ["tokio"] }
testcontainers-modules = { version = "0.11", features = ["redis", "postgres", "tokio"] }
wiremock = "0.6"
proptest = "1"
axum = { version = "0.7", features = ["macros"] }
serde_json = "1"

[[bench]]
name = "api_key_auth"
harness = false

[[bench]]
name = "invalidation_tags"
harness = false

[[bench]]
name = "email_templates"
harness = false

[[bench]]
name = "email_queue"
harness = false

[workspace]
